# nexus-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
nexus_rs/: index.html  sidebar-items.js
nexus_rs/client/: index.html  struct.Client.html
nexus_rs/models/: index.html  sidebar-items.js
nexus_rs/response/: index.html  struct.Response.html
serde/: trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
serde/de/: trait.Deserializer.html
serde/ser/: index.html  trait.Serialize.html  trait.SerializeMap.html  trait.SerializeSeq.html  trait.SerializeStruct.html  trait.SerializeStructVariant.html  trait.SerializeTuple.html  trait.SerializeTupleStruct.html  trait.SerializeTupleVariant.html  trait.Serializer.html
serde_json/: enum.Value.html  fn.from_value.html  fn.to_value.html  struct.Map.html  struct.Serializer.html
serde_json/ser/: struct.Serializer.html
serde_json/value/: enum.Value.html  fn.from_value.html  fn.to_value.html  index.html  struct.Map.html  trait.Index.html  trait.ToJson.html
src/: client.rs  error.rs  lib.rs  response.rs
src/deserializers/: datetime.rs  mod.rs  url.rs
src/models/: container.rs  content.rs  mod.rs  repository.rs
src/nexus_rs/: client.rs.html  lib.rs.html  response.rs.html
src/serde/: bytes.rs.html  error.rs.html  export.rs.html  iter.rs.html  lib.rs.html  macros.rs.html  utils.rs.html
src/serde_derive/: bound.rs.html  de.rs.html  lib.rs.html  ser.rs.html
src/serde_json/: de.rs.html  error.rs.html  lib.rs.html  macros.rs.html  (+5 more)
tests/: client.rs  repository.rs
(+97 files in other folders)
